--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,34 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+body{
+  background-color: rgb(15, 0, 29);
+  color: aliceblue;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#InputMat {
+  background-color: rgb(50, 0, 73);
+  padding: 20px;
 }
-
-.App-link {
-  color: #61dafb;
+#ValorMat{
+  background-color: rgb(50, 0, 73);
+  padding: 20px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#Out{
+  border: 2px solid rgb(6, 108, 148);
+}
+.row{
+  margin: 0%;
+  padding: 0%;
+}
+.col{
+  margin: 0%;
+  padding: 0%;
+}
+input{
+  margin: 0%;
+  padding: 0%;
+  border: 2px solid rgb(6, 108, 148);
+  background-color: rgb(50, 0, 73);
+  color: aliceblue;
 }
